# jaist-query-api

./: Cargo.toml  Dockerfile  JustFile  mysql-community-client-plugins_8.0.25-1debian10_amd64.deb  sample.env
migrations/2021-12-11-142958_init/: down.sql  up.sql
src/: lib.rs  schema.rs
src/controller/: mod.rs
src/domain/model/: mod.rs
src/infra/: mod.rs
src/infra/mysql/: mod.rs
src/infra/repo/: mod.rs
tools/ddl_docker/: Dockerfile
tools/query/: test_query_1.sql
