[package]
name = "jaist-query-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"

[[bin]]
name = "main"
path = "src/bin/main.rs"